הקמת קונטיינר עם ריווח עליון ותחתון + וכותרת ממורכזת

--- a/q1/index.html
+++ b/q1/index.html
@@ -9,5 +9,12 @@
 </head>
 
 <body>
+
+  <div class="container mt-3 mb-5">
+    <h1 class="mb-4 text-center">מערכת שעות - בית ספר יסודי רופין</h1>
+    <div class="row" dir="rtl">
+
+    </div>
+  </div>
 </body>
 </html>
