חלוקת דף לימים עם התאמה רספונסיביית של ימים בכל שורה לפי גודל מסך

--- a/q1/index.html
+++ b/q1/index.html
@@ -14,6 +14,44 @@
     <h1 class="mb-4 text-center">מערכת שעות - בית ספר יסודי רופין</h1>
     <div class="row" dir="rtl">
 
+ <!-- Day 1-->
+      <div class="col-12 col-md-6 col-lg-2 mb-4">
+        <h4>יום ראשון</h4>
+
+      </div>
+
+ <!-- Day 2 -->
+      <div class="col-12 col-md-6 col-lg-2 mb-4">
+        <h4>יום שני</h4>
+      </div>
+
+
+      <!-- Day 3 -->
+      <div class="col-12 col-md-6 col-lg-2 mb-4">
+        <h4>יום שלישי</h4>
+  
+      </div>
+
+ <!-- Day 4 -->
+      <div class="col-12 col-md-6 col-lg-2 mb-4">
+        <h4>יום רביעי</h4>
+
+      </div>
+
+      <!-- Day 5 -->
+      <div class="col-12 col-md-6 col-lg-2 mb-4">
+        <h4>יום חמישי</h4>
+
+      </div>
+
+      <!-- Day 6 -->
+      <div class="col-12 col-md-6 col-lg-2 mb-4">
+        <h4>יום שישי</h4>
+
+      </div>
+
+
+
     </div>
   </div>
 </body>
