הוספת כרטיסיות עם עיצוב מתאים

--- a/q1/index.html
+++ b/q1/index.html
@@ -17,6 +17,25 @@
  <!-- Day 1-->
       <div class="col-12 col-md-6 col-lg-2 mb-4">
         <h4>יום ראשון</h4>
+        <div class="card lesson-card mb-3">
+          <img src="images/math.png" class="card-img-top d-none d-lg-block" alt="תמונה מתמטיקה">
+          <div class="card-body">
+            <h5 class="card-title">מתמטיקה</h5>
+            <p class="card-subtitle">המורה: אנטולי</p>
+            <p class="card-text">כיתה: 231</p>
+            <p class="card-text time-text">08:00</p>
+          </div>
+        </div>
+
+        <div class="card lesson-card mb-3">
+          <img src="images/sport.jpg" class="card-img-top d-none d-lg-block" alt="תמונה ספורט">
+          <div class="card-body">
+            <h5 class="card-title">ספורט</h5>
+            <p class="card-subtitle">המורה: דימיטרי</p>
+            <p class="card-text">כיתה: אולם ספורט</p>
+            <p class="card-text time-text">12:00</p>
+          </div>
+        </div>
 
       </div>
 
@@ -26,7 +45,7 @@
       </div>
 
 
-      <!-- Day 3 -->
+ <!-- Day 3 -->
       <div class="col-12 col-md-6 col-lg-2 mb-4">
         <h4>יום שלישי</h4>
   
@@ -38,13 +57,13 @@
 
       </div>
 
-      <!-- Day 5 -->
+ <!-- Day 5 -->
       <div class="col-12 col-md-6 col-lg-2 mb-4">
         <h4>יום חמישי</h4>
 
       </div>
 
-      <!-- Day 6 -->
+ <!-- Day 6 -->
       <div class="col-12 col-md-6 col-lg-2 mb-4">
         <h4>יום שישי</h4>
 
