שכפול כרטיסיות והתאמת תוכן

--- a/q1/index.html
+++ b/q1/index.html
@@ -36,41 +36,109 @@
             <p class="card-text time-text">12:00</p>
           </div>
         </div>
-
       </div>
 
  <!-- Day 2 -->
       <div class="col-12 col-md-6 col-lg-2 mb-4">
         <h4>יום שני</h4>
+
+<div class="card lesson-card mb-3">
+          <img src="images/science.jpg" class="card-img-top d-none d-lg-block" alt="תמונה מדעים">
+          <div class="card-body">
+            <h5 class="card-title">מדעים</h5>
+            <p class="card-subtitle">המורה: תמרה </p>
+            <p class="card-text">כיתה: 435</p>
+            <p class="card-text time-text">09:00</p>
+          </div>
+        </div>
+
+        <div class="card lesson-card mb-3">
+          <img src="images/geog.jpg" class="card-img-top d-none d-lg-block" alt="תמונה גאוגרפיה">
+          <div class="card-body">
+            <h5 class="card-title">גאוגרפיה</h5>
+            <p class="card-subtitle">המורה: דיקלה </p>
+            <p class="card-text">כיתה: 007</p>
+            <p class="card-text time-text">12:00</p>
+          </div>
+        </div>
       </div>
 
 
  <!-- Day 3 -->
       <div class="col-12 col-md-6 col-lg-2 mb-4">
         <h4>יום שלישי</h4>
-  
+          <div class="card lesson-card mb-3">
+          <img src="images/hebrew.jpg" class="card-img-top d-none d-lg-block" alt="תמונה עברית">
+          <div class="card-body">
+            <h5 class="card-title">עברית</h5>
+            <p class="card-subtitle">המורה: לועיזה </p>
+            <p class="card-text">כיתה: 344</p>
+            <p class="card-text time-text">09:00</p>
+          </div>
+        </div>
+
+        <div class="card lesson-card mb-3">
+          <img src="images/comp.jpg" class="card-img-top d-none d-lg-block" alt="תמונה מחשבים">
+          <div class="card-body">
+            <h5 class="card-title">מחשבים</h5>
+            <p class="card-subtitle">המורה: ארדיסק </p>
+            <p class="card-text">כיתה: 1</p>
+            <p class="card-text time-text">12:00</p>
+          </div>
+        </div>
       </div>
 
  <!-- Day 4 -->
       <div class="col-12 col-md-6 col-lg-2 mb-4">
         <h4>יום רביעי</h4>
-
+        <div class="card lesson-card mb-3">
+          <img src="images/arabic.jpg" class="card-img-top d-none d-lg-block" alt="תמונה ערבית">
+          <div class="card-body">
+            <h5 class="card-title">ערבית</h5>
+            <p class="card-subtitle">המורה: חמודה </p>
+            <p class="card-text">כיתה: 236</p>
+            <p class="card-text time-text">09:00</p>
+          </div>
+        </div>
       </div>
 
  <!-- Day 5 -->
       <div class="col-12 col-md-6 col-lg-2 mb-4">
         <h4>יום חמישי</h4>
+        <div class="card lesson-card mb-3">
+          <img src="images/literature.jpg" class="card-img-top d-none d-lg-block" alt="תמונה ספרות">
+          <div class="card-body">
+            <h5 class="card-title">ספרות</h5>
+            <p class="card-subtitle">המורה: ישראלה </p>
+            <p class="card-text">כיתה: 190</p>
+            <p class="card-text time-text">09:00</p>
+          </div>
+        </div>
 
+<div class="card lesson-card mb-3">
+          <img src="images/english.jpg" class="card-img-top d-none d-lg-block" alt="תמונה אנגלית">
+          <div class="card-body">
+            <h5 class="card-title">אנגלית</h5>
+            <p class="card-subtitle">המורה: אמריקה </p>
+            <p class="card-text">כיתה: 51</p>
+            <p class="card-text time-text">12:00</p>
+          </div>
+        </div>
       </div>
 
  <!-- Day 6 -->
       <div class="col-12 col-md-6 col-lg-2 mb-4">
         <h4>יום שישי</h4>
-
+        <div class="card lesson-card mb-3">
+          <img src="images/bible.jpg" class="card-img-top d-none d-lg-block" alt="תמונה תנך ">
+          <div class="card-body">
+            <h5 class="card-title">תנ"ך</h5>
+            <p class="card-subtitle">המורה: יהודית </p>
+            <p class="card-text">כיתה: 785</p>
+            <p class="card-text time-text">09:00</p>
+          </div>
+        </div>
       </div>
-
-
-
     </div>
   </div>
 </body>
