--- a/q2/index.html
+++ b/q2/index.html
@@ -11,11 +11,24 @@
   <header>
     <h1>  מדריך השרדות במאדים- אתם לא בכדור הארץ יותר...</h1>
   </header>
-<main>
+
+  <main class="card-container">
+    <section class="survival-card">
+      <h2> איך לנשום בלי להיבהל?</h2>
+<p>דבר ראשון תסלכל לשמים ותגיד תודה שאתה רואה משהו: יש אנשים שלא רואים בחייהם!</p>
+<p>דבר שני תעצום עיניים עם מגבת, ותתחיל לחפש בקבוק מים, ואז תשתה אותו בשלוק אחד</p>
+    </section>
+
+
+ <section class="survival-card">
+      <h2> איך לנשום בלי להיבהל?</h2>
+<p>דבר ראשון תסלכל לשמים ותגיד תודה שאתה רואה משהו: יש אנשים שלא רואים בחייהם!</p>
+<p>דבר שני תעצום עיניים עם מגבת, ותתחיל לחפש בקבוק מים, ואז תשתה אותו בשלוק אחד</p>
+    </section>
 
 
 
-</main>
+  </main>
 
     <footer>
     <p><a href="#top">אותי מהדהד לקדמת הארץ</a></p>
