--- a/q2/index.html
+++ b/q2/index.html
@@ -26,7 +26,17 @@
 <p>דבר שני תעצום עיניים עם מגבת, ותתחיל לחפש בקבוק מים, ואז תשתה אותו בשלוק אחד</p>
     </section>
 
+ <section class="survival-card">
+      <h2> איך לנשום בלי להיבהל?</h2>
+<p>דבר ראשון תסלכל לשמים ותגיד תודה שאתה רואה משהו: יש אנשים שלא רואים בחייהם!</p>
+<p>דבר שני תעצום עיניים עם מגבת, ותתחיל לחפש בקבוק מים, ואז תשתה אותו בשלוק אחד</p>
+    </section>
 
+     <section class="survival-card">
+      <h2> איך לנשום בלי להיבהל?</h2>
+<p>דבר ראשון תסלכל לשמים ותגיד תודה שאתה רואה משהו: יש אנשים שלא רואים בחייהם!</p>
+<p>דבר שני תעצום עיניים עם מגבת, ותתחיל לחפש בקבוק מים, ואז תשתה אותו בשלוק אחד</p>
+    </section>
 
   </main>
 
