--- a/q2/index.html
+++ b/q2/index.html
@@ -13,30 +13,25 @@
   </header>
 
   <main class="card-container">
-    <section class="survival-card">
-      <h2> איך לנשום בלי להיבהל?</h2>
-<p>דבר ראשון תסלכל לשמים ותגיד תודה שאתה רואה משהו: יש אנשים שלא רואים בחייהם!</p>
-<p>דבר שני תעצום עיניים עם מגבת, ותתחיל לחפש בקבוק מים, ואז תשתה אותו בשלוק אחד</p>
-    </section>
+
+<div class="survival-card">
+  <div class="card-footer">מתקדמים בלבד</div>
+  
+  <div class="card-content">
+    <div class="card-text-section">
+      <div class="card-topic">איך לנשום בלי להיבהל?</div>
+      <div class="card-text">
+        דבר ראשון תסתכל לשמיים ותגיד תודה שאתה רואה משהו.<br>
+        יש אנשים שלא רואים בחיים!<br>
+        דבר שני תעצום עיניים עם מגבת, ותחפש מים...
+      </div>
+    </div>
+    
+    <img src="images/mars.jpg" alt="אסטרונאוט על מאדים" class="card-image">
+  </div>
+</div>
 
 
- <section class="survival-card">
-      <h2> איך לנשום בלי להיבהל?</h2>
-<p>דבר ראשון תסלכל לשמים ותגיד תודה שאתה רואה משהו: יש אנשים שלא רואים בחייהם!</p>
-<p>דבר שני תעצום עיניים עם מגבת, ותתחיל לחפש בקבוק מים, ואז תשתה אותו בשלוק אחד</p>
-    </section>
-
- <section class="survival-card">
-      <h2> איך לנשום בלי להיבהל?</h2>
-<p>דבר ראשון תסלכל לשמים ותגיד תודה שאתה רואה משהו: יש אנשים שלא רואים בחייהם!</p>
-<p>דבר שני תעצום עיניים עם מגבת, ותתחיל לחפש בקבוק מים, ואז תשתה אותו בשלוק אחד</p>
-    </section>
-
-     <section class="survival-card">
-      <h2> איך לנשום בלי להיבהל?</h2>
-<p>דבר ראשון תסלכל לשמים ותגיד תודה שאתה רואה משהו: יש אנשים שלא רואים בחייהם!</p>
-<p>דבר שני תעצום עיניים עם מגבת, ותתחיל לחפש בקבוק מים, ואז תשתה אותו בשלוק אחד</p>
-    </section>
 
   </main>
 
