--- a/q2/index.html
+++ b/q2/index.html
@@ -12,6 +12,17 @@
     <h1>  מדריך השרדות במאדים- אתם לא בכדור הארץ יותר...</h1>
   </header>
 
+
+<div class="side-nav">
+  <strong> מצבי חירום:</strong> <br>
+  <a href="">חמצן</a><br> 
+  <a href="">מים</a><br> 
+  <a href="">מילון חייזרי </a><br> 
+  <a href="">מצבי חירום</a>
+</div>
+
+
+
   <main class="card-container">
 
 <div class="survival-card">
@@ -21,19 +32,53 @@
     <div class="card-text-section">
       <div class="card-topic">איך לנשום בלי להיבהל?</div>
       <div class="card-text">
-        דבר ראשון תסתכל לשמיים ותגיד תודה שאתה רואה משהו.<br>
-        יש אנשים שלא רואים בחיים!<br>
+        <p>
+        דבר ראשון תסתכל לשמיים ותגיד תודה שאתה רואה משהו.
+        יש אנשים שלא רואים בחיים!
         דבר שני תעצום עיניים עם מגבת, ותחפש מים...
+        </p>
       </div>
     </div>
     
     <img src="images/mars.jpg" alt="אסטרונאוט על מאדים" class="card-image">
+    <div class="card-buttons">
+      <button class="text-button">קרא ואל תמות</button>
+      <button class="text-button">עוד טריקים לנשום</button>
+    </div>
+
+  </div>
+</div>
+
+<div class="survival-card">
+  <div class="card-footer"> אזהרה</div>
+  
+  <div class="card-content">
+    <div class="card-text-section">
+      <div class="card-topic">מה שזז ואסור לאכול!</div>
+      <div class="card-text">
+      <p> שיים לב שככל הנראה יש בעלי חיים על מאדים 
+       יש שם בעלי חיים בלי פרווה מכוערים
+        ההמלצה שלנו היא לאכול רק מה שמאושר על ידי משרד הבריאות גם אם אתה עומד למות ורעב
+     </p> 
+    </div>
+    </div>
+    
+    <img src="images/goalnefesh.jpg" alt=" חיה דוחה " class="card-image">
   </div>
 </div>
 
 
 
   </main>
+
+
+
+
+
+
+
+
+
 
     <footer>
     <p><a href="#top">אותי מהדהד לקדמת הארץ</a></p>
