הוספת הודעה בעת ריחוף על התמונה

--- a/q2/index.html
+++ b/q2/index.html
@@ -39,8 +39,10 @@
         </p>
       </div>
     </div>
-    
-    <img src="images/mars.jpg" alt="אסטרונאוט על מאדים" class="card-image">
+    <div class="card-image-wrapper">
+      <img src="images/mars.jpg" alt="אסטרונאוט על מאדים" class="card-image">
+      <div class="hover-tip">טיפ הישרדות: קח נשימה עמוקה ואל תיכנס לפאניקה!</div>
+    </div>
     <div class="card-buttons">
       <button class="text-button">קרא ואל תמות</button>
       <button class="text-button">עוד טריקים לנשום</button>
