--- a/q2/index.html
+++ b/q2/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1>  מדריך השרדות במאדים- אתם לא בכדור הארץ יותר...</h1>
+     מדריך השרדות במאדים- אתם לא בכדור הארץ יותר...
   </header>
 
 
@@ -64,8 +64,14 @@
      </p> 
     </div>
     </div>
-    
-    <img src="images/goalnefesh.jpg" alt=" חיה דוחה " class="card-image">
+    <div class="card-image-wrapper">
+      <img src="images/goalnefesh.jpg" alt=" חיה דוחה " class="card-image">
+      <div class="hover-tip">טיפ הישרדות: אל תאכל את זה!</div>
+    </div>
+    <div class="card-buttons">
+      <button class="text-button">קרא ואל תמות</button>
+      <button class="text-button">עוד טריקים לנשום</button>
+    </div>
   </div>
 </div>
 
