--- a/q2/index.html
+++ b/q2/index.html
@@ -22,7 +22,7 @@
 </div>
 
 
-
+<!-- Card 1 -->
   <main class="card-container">
 
 <div class="survival-card">
@@ -50,7 +50,81 @@
 
   </div>
 </div>
+<!-- Card 2 -->
+<div class="survival-card">
+  <div class="card-footer"> אזהרה</div>
+  
+  <div class="card-content">
+    <div class="card-text-section">
+      <div class="card-topic">מה שזז ואסור לאכול!</div>
+      <div class="card-text">
+      <p> שיים לב שככל הנראה יש בעלי חיים על מאדים 
+       יש שם בעלי חיים בלי פרווה מכוערים
+        ההמלצה שלנו היא לאכול רק מה שמאושר על ידי משרד הבריאות גם אם אתה עומד למות ורעב
+     </p> 
+    </div>
+    </div>
+    <div class="card-image-wrapper">
+      <img src="images/goalnefesh.jpg" alt=" חיה דוחה " class="card-image">
+      <div class="hover-tip">טיפ הישרדות: אל תאכל את זה!</div>
+    </div>
+    <div class="card-buttons">
+      <button class="text-button">קרא ואל תמות</button>
+      <button class="text-button">עוד טריקים לנשום</button>
+    </div>
+  </div>
+</div>
+<!-- Card 3 -->
+<div class="survival-card">
+  <div class="card-footer"> אזהרה</div>
+  
+  <div class="card-content">
+    <div class="card-text-section">
+      <div class="card-topic">מה שזז ואסור לאכול!</div>
+      <div class="card-text">
+      <p> שיים לב שככל הנראה יש בעלי חיים על מאדים 
+       יש שם בעלי חיים בלי פרווה מכוערים
+        ההמלצה שלנו היא לאכול רק מה שמאושר על ידי משרד הבריאות גם אם אתה עומד למות ורעב
+     </p> 
+    </div>
+    </div>
+    <div class="card-image-wrapper">
+      <img src="images/goalnefesh.jpg" alt=" חיה דוחה " class="card-image">
+      <div class="hover-tip">טיפ הישרדות: אל תאכל את זה!</div>
+    </div>
+    <div class="card-buttons">
+      <button class="text-button">קרא ואל תמות</button>
+      <button class="text-button">עוד טריקים לנשום</button>
+    </div>
+  </div>
+</div>
 
+<!-- Card 4 -->
+<div class="survival-card">
+  <div class="card-footer"> אזהרה</div>
+  
+  <div class="card-content">
+    <div class="card-text-section">
+      <div class="card-topic">מה שזז ואסור לאכול!</div>
+      <div class="card-text">
+      <p> שיים לב שככל הנראה יש בעלי חיים על מאדים 
+       יש שם בעלי חיים בלי פרווה מכוערים
+        ההמלצה שלנו היא לאכול רק מה שמאושר על ידי משרד הבריאות גם אם אתה עומד למות ורעב
+     </p> 
+    </div>
+    </div>
+    <div class="card-image-wrapper">
+      <img src="images/goalnefesh.jpg" alt=" חיה דוחה " class="card-image">
+      <div class="hover-tip">טיפ הישרדות: אל תאכל את זה!</div>
+    </div>
+    <div class="card-buttons">
+      <button class="text-button">קרא ואל תמות</button>
+      <button class="text-button">עוד טריקים לנשום</button>
+    </div>
+  </div>
+</div>
+
+<!-- Card 5 -->
 <div class="survival-card">
   <div class="card-footer"> אזהרה</div>
   
@@ -78,15 +152,6 @@
 
 
   </main>
-
-
-
-
-
-
-
-
-
 
     <footer>
     <p><a href="#top">אותי מהדהד לקדמת הארץ</a></p>
