סידור של footer

--- a/q2/index.html
+++ b/q2/index.html
@@ -76,21 +76,19 @@
 </div>
 <!-- Card 3 -->
 <div class="survival-card">
-  <div class="card-footer"> אזהרה</div>
+  <div class="card-footer"> נבדק על ידי חייזר</div>
   
   <div class="card-content">
     <div class="card-text-section">
-      <div class="card-topic">מה שזז ואסור לאכול!</div>
+      <div class="card-topic"> ידעתם שבמאדים ממש קר?</div>
       <div class="card-text">
-      <p> שיים לב שככל הנראה יש בעלי חיים על מאדים 
-       יש שם בעלי חיים בלי פרווה מכוערים
-        ההמלצה שלנו היא לאכול רק מה שמאושר על ידי משרד הבריאות גם אם אתה עומד למות ורעב
+      <p>הטמפרטורות במאדים מגיעות ל -125 מעלות צלזיוס, זה ממש קר בניגוד לכך שחושבים שחם שם... החייזר אמר שלחפור בור באדמה ולהיכנס אליו עד שיגיע אמצע היום זה הכי בטוח
      </p> 
     </div>
     </div>
     <div class="card-image-wrapper">
-      <img src="images/goalnefesh.jpg" alt=" חיה דוחה " class="card-image">
-      <div class="hover-tip">טיפ הישרדות: אל תאכל את זה!</div>
+      <img src="images/temp.jpg" alt=" בור באדמה" class="card-image">
+      <div class="hover-tip">טיפ הישרדות: תקנה גם שמיכת פוך!</div>
     </div>
     <div class="card-buttons">
       <button class="text-button">קרא ואל תמות</button>
@@ -101,21 +99,19 @@
 
 <!-- Card 4 -->
 <div class="survival-card">
-  <div class="card-footer"> אזהרה</div>
+  <div class="card-footer"> מתקדמים בלבד</div>
   
   <div class="card-content">
     <div class="card-text-section">
-      <div class="card-topic">מה שזז ואסור לאכול!</div>
+      <div class="card-topic">מה קורה אם נתקעים מחוץ לתחנת חלל?</div>
       <div class="card-text">
-      <p> שיים לב שככל הנראה יש בעלי חיים על מאדים 
-       יש שם בעלי חיים בלי פרווה מכוערים
-        ההמלצה שלנו היא לאכול רק מה שמאושר על ידי משרד הבריאות גם אם אתה עומד למות ורעב
+      <p> בנעלי הירח שלך יש מפתח צינורות מפלדה. אם תפרק את הידית שלו, יש שם מפתח סודי של הדלק לחירום בלבד, תשתמש בו.
      </p> 
     </div>
     </div>
     <div class="card-image-wrapper">
-      <img src="images/goalnefesh.jpg" alt=" חיה דוחה " class="card-image">
-      <div class="hover-tip">טיפ הישרדות: אל תאכל את זה!</div>
+      <img src="images/station.jpg" alt=" תחנת חלל " class="card-image">
+      <div class="hover-tip">טיפ הישרדות: תפעל בשכל ואל תצא מאודה!</div>
     </div>
     <div class="card-buttons">
       <button class="text-button">קרא ואל תמות</button>
@@ -132,15 +128,12 @@
     <div class="card-text-section">
       <div class="card-topic">מה שזז ואסור לאכול!</div>
       <div class="card-text">
-      <p> שיים לב שככל הנראה יש בעלי חיים על מאדים 
-       יש שם בעלי חיים בלי פרווה מכוערים
-        ההמלצה שלנו היא לאכול רק מה שמאושר על ידי משרד הבריאות גם אם אתה עומד למות ורעב
-     </p> 
+      <p> אם קורה וה wifi שלך מתחבר לחייזר מאגף התחזוקה, אז זו בעיה ממש חמודה, כנראה נגמרת לך הסוללה במכשיר.
     </div>
     </div>
     <div class="card-image-wrapper">
-      <img src="images/goalnefesh.jpg" alt=" חיה דוחה " class="card-image">
-      <div class="hover-tip">טיפ הישרדות: אל תאכל את זה!</div>
+      <img src="images/wifi.jpg" alt=" מכשיר אינטרנט" class="card-image">
+      <div class="hover-tip">טיפ הישרדות: תדאג להטעין כל ערב !</div>
     </div>
     <div class="card-buttons">
       <button class="text-button">קרא ואל תמות</button>
@@ -154,7 +147,7 @@
   </main>
 
     <footer>
-    <p><a href="#top">אותי מהדהד לקדמת הארץ</a></p>
+    <p><a href="#top">שדר אותי חזרה לכדור הארץ</a></p>
   </footer>
 
 </body>
