קישורים לתוך העמוד

--- a/q2/index.html
+++ b/q2/index.html
@@ -15,17 +15,17 @@
 
 <div class="side-nav">
   <strong> מצבי חירום:</strong> <br>
-  <a href="">חמצן</a><br> 
-  <a href="">מים</a><br> 
-  <a href="">מילון חייזרי </a><br> 
-  <a href="">מצבי חירום</a>
+  <a href="#o2">חמצן</a><br> 
+  <a href="#water">מים</a><br> 
+  <a href="#dictionary">מילון חייזרי </a><br> 
+  <a href="#emergency">מצבי חירום</a>
 </div>
 
 
 <!-- Card 1 -->
   <main class="card-container">
 
-<div class="survival-card">
+<div class="survival-card" id="o2">
   <div class="card-footer">מתקדמים בלבד</div>
   
   <div class="card-content">
@@ -51,7 +51,7 @@
   </div>
 </div>
 <!-- Card 2 -->
-<div class="survival-card">
+<div class="survival-card" id="water">
   <div class="card-footer"> אזהרה</div>
   
   <div class="card-content">
@@ -75,7 +75,7 @@
   </div>
 </div>
 <!-- Card 3 -->
-<div class="survival-card">
+<div class="survival-card" id="dictionary">
   <div class="card-footer"> נבדק על ידי חייזר</div>
   
   <div class="card-content">
@@ -98,7 +98,7 @@
 </div>
 
 <!-- Card 4 -->
-<div class="survival-card">
+<div class="survival-card" id="emergency">
   <div class="card-footer"> מתקדמים בלבד</div>
   
   <div class="card-content">
