כפתור שלח דיווח

--- a/q3/index.html
+++ b/q3/index.html
@@ -12,6 +12,16 @@
 <body>
 <div class="page-container">
   <h2>טופס דיווח תקלה בתעלת זמן</h2>
+<form id="reportform">
+
+
+
+
+<button type="submit">שלח דיווח</button>  
+</form>
+
+
+
 
   
 </div>
