--- a/q3/index.html
+++ b/q3/index.html
@@ -36,7 +36,7 @@
     </select><br>
 
 <!-- field 5 -->
-    <label for="group">האם יותר מאדם אחד רצה?</label><br>
+    <label for="group">האם יותר מאדם אחד חצה?</label><br>
     <select id="group" name="group">
       <option value="null">בחר</option>
       <option value="yes">כן</option>
