ולידציה של גדול מ 0 למספר תעלה

--- a/q3/index.html
+++ b/q3/index.html
@@ -58,6 +58,7 @@
 
 
 <button type="submit">שלח דיווח</button>  
+<div id="formMessage" class="form-message" style="display: none;"></div>
 </form>
 
 
