עיצוב כפתור עם לינק שיהיה בלי קו תחתון

--- a/q3/view.html
+++ b/q3/view.html
@@ -8,7 +8,15 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  
   <h2>דיווחים שהוגשו</h2>
+  <label for="filter">סינון לפי סוג תקלה:</label>
+  <select id="filter">
+   <option value="all">הצג הכל</option>
+   <option value="רעד">רעד</option>
+   <option value="חור בזמן">חור בזמן</option>
+   <option value="מפגש עם דינוזאור">מפגש עם דינוזאור</option>
+  </select><br>
   <button><a href="index.html">דף טופס</a></button>
   <div id="reportsContainer"></div>
 </body>
