הטמעת גריד של 3 כרטיסיות בשורה

--- a/q3/view.html
+++ b/q3/view.html
@@ -18,6 +18,6 @@
    <option value="מפגש עם דינוזאור">מפגש עם דינוזאור</option>
   </select><br>
   <button><a href="index.html">דף טופס</a></button>
-  <div id="reportsContainer"></div>
+  <div id="reportscontainer" class="reportsgrid"></div>
 </body>
 </html>
