--- a/q2/index.html
+++ b/q2/index.html
@@ -126,7 +126,7 @@
   
   <div class="card-content">
     <div class="card-text-section">
-      <div class="card-topic">מה שזז ואסור לאכול!</div>
+      <div class="card-topic">מחושים של חייזר או wifi?</div>
       <div class="card-text">
       <p> אם קורה וה wifi שלך מתחבר לחייזר מאגף התחזוקה, אז זו בעיה ממש חמודה, כנראה נגמרת לך הסוללה במכשיר.
     </div>
